kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pottertest-deployment
  namespace: dextratest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pottertest
  template:
    metadata:
      labels:
        app: pottertest
    spec:
      containers:
        - name: pottertest
          image: dritoferro/potterdextratest
          ports:
            - containerPort: 8080
