kubernetes/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-deployment
  namespace: dextratest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgredb
          image: postgres:latest
          ports:
            - containerPort: 5432
