kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pottertest-service
  namespace: dextratest
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    app: pottertest
