kubernetes/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
  namespace: dextratest
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgre
