kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: dextratest
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
