kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dextratest
spec:
  rules:
    - host: www.pottertest.com.br
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pottertest-service
                port:
                  number: 8080
